--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       background-color: #282828;
       color: #ffffff;
@@ -39,6 +45,9 @@
       visibility: hidden;
       animation: fadeIn 1s forwards;
       animation-delay: 0.5s;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     /* Preloader Styles */
@@ -215,6 +224,9 @@
       font-size: 0.9rem;
       margin-top: 30px;
       padding: 20px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
     }
 
     .footer a {
